test/visibility/use-no-qualified/public-use-no-mod2.good
public-use-no-mod2.chpl:8: In function 'main':
public-use-no-mod2.chpl:9: error: 'M' undeclared (first use this function)
